--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.jumbotron {
+  padding: 30px;
+}
+.navbar-brand {
+  font-size: 1em;
 }
